--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+*, *:after, *:before {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
+
+body {
+  background: black;
+  color: white;
+  font-family: Roboto , sans-serif;
+  font-size: 100%;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
